# selenium_like_stories

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: settings.py
firefoxdriver/: main.py  services.py
